fixed most mistakes, still have some issues with scale/alignment

--- a/iron_yard/css/iron_yard_style.css
+++ b/iron_yard/css/iron_yard_style.css
@@ -12,6 +12,10 @@ body{
   	color: black;
  
 }
+header{
+	border-bottom: 1px solid black;
+	padding-bottom: 10px;
+}
 header a{
 	background: #00d9f8; /* Old browsers */
 	background: -moz-linear-gradient(top,  #00d9f8 0%, #00a5ee 100%); /* FF3.6+ */
@@ -20,7 +24,7 @@ header a{
 	background: -o-linear-gradient(top,  #00d9f8 0%,#00a5ee 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top,  #00d9f8 0%,#00a5ee 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #00d9f8 0%,#00a5ee 100%); /* W3C */
-	f
+	
 	text-decoration: none;
 	color:white;
 	font-family: Arial, Helvetica, sans-serif;
@@ -81,15 +85,19 @@ img{
 	height: 15px;
 }
 
+	
 .class_image{
+
+	border-top: 1px, solid, gray;
+
 	
 	display:block;
 	border-radius:5px 5px 5px 5px;
 	padding-bottom:5px;
-
+	margin-top: 10px;
 	padding-top: 10px;
 	background: url(../img/class.png);
-	height: 212px;
+	height: 300px;
 }
 
 .learn{
@@ -110,18 +118,20 @@ img{
 }
 .videobutton{
 	
-	border-radius: 5px;
-	position: relative;
 	
-	left: 50px;
-	top: 60px;
-	height: 50px;
-	border-radius: 5px;
+	position: relative;
+	top:100px;
+	left:50px;
+	vertical-align:middle;
+
+	
+	
+	
 
 }
 .videobutton a{
-	padding:15px;
-	background: #00d9f8; /* Old browsers */
+	
+	border-radius: 5px;
 	background: -moz-linear-gradient(top,  #00d9f8 0%, #00a5ee 100%); /* FF3.6+ */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00d9f8), color-stop(100%,#00a5ee)); /* Chrome,Safari4+ */
 	background: -webkit-linear-gradient(top,  #00d9f8 0%,#00a5ee 100%); /* Chrome10+,Safari5.1+ */
@@ -130,24 +140,33 @@ img{
 	background: linear-gradient(to bottom,  #00d9f8 0%,#00a5ee 100%); /* W3C */
 	color:white;
 	text-decoration: none;
-	font-size:.9em;
+	font-size:1sssssem;
 	font-weight: lighter;
-	width: 30%;
+	width: 200px;
+	position: relative;
+	display: block;
+	padding:25px;
+	text-align: left;
+}
+
+.videobutton img{
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	vertical-align: middle;
 
 
 }
 
-#arrow{
-	position:relative;
-	left:170px;
-	height: 5px;
-}
 
-}
+
+
+
 .courses{
 	display: block;
 	border-top: 1px, solid;
 	padding-top: 20px;
+	border-bottom: 1px solid gray;
 
 
 }
@@ -160,6 +179,7 @@ img{
 	width: 24%;
 	text-align: center;
 	margin-left: 5px;
+
 
 }
 
@@ -174,36 +194,29 @@ img{
 
 .applications{
 
-
-	display: block;
+	margin-top: 10px;
 	background: url(../img/applications.png);
+	background-repeat: no-repeat;
+	background-size: cover;
 	padding: 20px;
 	border-radius: 5px;
 	color: white;
-
-	
+	position:relative;	
 }
 .applications h1{
 	font-style: bold;
 	font-size:2em;
+	padding:20px;
+	margin-bottom:20px;
 }
-.applications p{
+.applications p a{
 	font-weight: lighter;
-}
-
-.applications a{
-	
-	text-decoration: none;
+	background:none;
+	font-family: arial, helvetica, sans-serif;
 	color:white;
-	font-family: Arial, Helvetica, sans-serif;
-	padding: 5px;
-	border-radius: 5px;
-	text-decoration: none;
-
 }
 
-}
-#apply{
+.applications .button{
 	padding:15px;
 	background: #00d9f8; /* Old browsers */
 	background: -moz-linear-gradient(top,  #00d9f8 0%, #00a5ee 100%); /* FF3.6+ */
@@ -214,10 +227,25 @@ img{
 	background: linear-gradient(to bottom,  #00d9f8 0%,#00a5ee 100%); /* W3C */
 	color:white;
 	text-decoration: none;
-	font-size:.9em;
+	font-size:1em;
 	font-weight: lighter;
-	width: 30%;
+	position:absolute;
+	right:50px;
+	top:50px;
+	display: block;
+	border-radius:5px;
+	
 
+}
+
+.gray{
+	display:inline-block;
+	width:60%;
+}
+
+.orange{
+	display:inline-block;
+	width:25%;
 }
 .about{
 	text-align: center;
@@ -237,6 +265,8 @@ img{
 }
 
 .who{
+	margin-top:10px;
+	border-top: 1px solid gray;
 	display: block;
 	left-margin:15px;
 
@@ -272,10 +302,9 @@ footer{
 	
 	background-color: #ff6c00;
 	display:block;
+	text-align:center;
 }
-footer{
-	height:220px;
-} 
+ 
 
 footer ul{
 	
@@ -287,27 +316,27 @@ footer ul{
 footer li{
 	display:inline-block;
 	text-decoration:none;
+	margin-bottom:10px;
+
 	
 }
 
 footer a{
 	text-decoration:none;
 	color: white;
-	padding: 5px;
+	padding: 15px;
 }
 
 #footerlogo{
-	position: relative;
-	top:5px;
-	left: 360px;
+	margin:0, auto;
+	display:inline-block;
 }
 
 #footerlinks{
-	padding-left:10px;
-	position:absolute;
-	width:40%;
+	padding:10px;
+
+
 	text-align: center;
-	position: relative;
-	left:255px;
+	
 }
 
